--- a/Webapp/Webapp/Views/Treatment/Edit.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Edit.cshtml
@@ -10,12 +10,12 @@
 <div class="container bootstrap snippet col-lg-offset-0" id="container">
     <div class="row">
         <div class="col-sm-10"><h1>Pas de behandeling aan</h1></div>
-    </div>
-    <div class="row">
+    </div>    <div class="row">
         <div class="col-sm-9">
             <div class="tab-content">
                 <div class="tab-pane active" id="home">
                     <hr>
+                    <span asp-validation-for="Name" class="text-danger"></span>
                     <form class="form" method="post">
                         <div class="form-group">
                             <div class="col-xs-12">
@@ -25,20 +25,20 @@
                         </div>
                         <div class="form-group">
                             <div class="col-xs-6">
-                                <label for="Age"><h4>Behandelingsnaam</h4></label>
+                                <label for="treatmentname"><h4>Behandelingsnaam</h4></label>
                                 <input type="text" class="form-control" asp-for="Name" value="@Model.Name" title="Naam van de behandeling.">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-6">
                                 <label for="nameTreatment"><h4>Behandelingstype</h4></label>
-                                <select asp-for="TypeId" type="text" class="form-control" placeholder="Type van de behandeling" disabled     title="Type van de behandeling.">
+                                <select asp-for="TypeId" type="text" class="form-control" placeholder="Type van de behandeling" disabled title="Type van de behandeling.">
                                     @foreach (var Type in Model.TreatmentTypes)
                                     {
                                         if (@Model.TypeId == Type.Id)
                                         {
                                             <option selected value="@Type.Id">@Type.Name</option>
-                                        } 
+                                        }
                                         else
                                         {
                                             <option value="@Type.Id">@Type.Name</option>
@@ -74,7 +74,7 @@
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <br />
-                                <button type="submit" class="btn btn-primary" asp-controller="Treatment" asp-action="Edit">Pas Aan</button> 
+                                <button type="submit" class="btn btn-primary" asp-controller="Treatment" asp-action="Edit">Pas Aan</button>
                             </div>
                         </div>
                     </form>
@@ -87,3 +87,4 @@
     <div>
         <a asp-action="Index">Terug naar lijst</a>
     </div>
+</div>
